Summary changelog file for release.

Release 0.9.0.1, Nov 22, 2019.
- Internal release with full operations and plotting support.

Release 0.9.0.0, Nov 16, 2019.
- Internal release with nominal support for DBAT XML scripts.
- Scripting support for input (full), operations (most), output (minor).

Release 0.8.5.1, Jan 13, 2019.
- Fix to avoid some lengthy pre-bundle computations unless they are needed.

Release 0.8.5.0, Jan 03, 2019.
- Major restructuring of the main data structure.
- Added support for prior observations of camera positions.
- Added high-level functions to refer to camera parameters by name
  rather than by row number.
- Added high-level functions to set up EO/OP parameters for the bundle.
- Added more information about computer system to report file.
- Added information about control files to report file.
- Cleaned up naming scheme of camera parameters.
- Various bugfixed, including handling of overlapping normal and
  smartpoint ids in PM export file.

Release 0.8.0.0, Oct 26, 2018.
- Parameter handling in bundle rewritten to allow parameters to be
  estimated to be block-invariant (common to all images),
  image-variant (unique for each image), and anything inbetween.
  Furthermore, parameter sets can be split-variant, e.g., some IO
  parameters can be block-invariant and some can be image-variant.
- Added cumulative significance computation for lens K and P
  parameters to the result file.
- Added parameter and observation count and total redundancy to the
  result file.

Release 0.7.6.1, Oct 25, 2018.
- Bugfix to v0.7.6.0 to fix that the format change was introduced with
  Photoscan v1.4.1 and not with v1.4.0.

Release 0.7.6.0, Oct 17, 2018.
- Added support for Photoscan file format v1.4.0 (Photoscan program v1.4.x).

Release 0.7.5.0, May 30, 2018.
- Restructured Jacobian computations for Riva 2018 conference paper.
- Added support for affine parameters (aspect and skew) (lens distortion
  models 3-5).