@@ -35,7 +35,7 @@ for i=1:length(files)
       case 'io'
         warning('%s output file not implemented yet',file)
       case 'image_residuals'
-        warning('%s output file not implemented yet',file)
+        WriteImageResidualsFile(s,outputFiles.image_residuals,baseDir,docFile);
       otherwise
         error('DBAT XML script output/file error: Unknown file %s',file);
     end
@@ -43,7 +43,7 @@ end
 
 
 function WriteReportFile(s,report,baseDir)
-% Write a report file to 
+% Write a report file.
 
 [ok,msg]=checkxmlfields(report,'file');
 if ~ok, error('DBAT XML script output/files/report error: %s',msg); end
@@ -66,3 +66,66 @@ s.bundle.info=bundle_cov(s,s.bundle.info,'prepare');
 
 fprintf('\nBundle result file %s generated.\n',fileName);
 s=bundle_result_file(s,s.bundle.info,fileName);
+
+
+function WriteImageResidualsFile(s,imageResiduals,baseDir,docFile)
+% Write a file with the largest image residuals.
+
+[ok,msg]=checkxmlfields(imageResiduals,{'file','Attributes'},[true,false]);
+if ~ok, error('DBAT XML script output/files/image_residuals error: %s',msg); end
+
+if isfield(imageResiduals,'Attributes') && ...
+        isfield(imageResiduals.Attributes,'top_count')
+    topCount=sscanf(imageResiduals.Attributes.top_count,'%d');
+else
+    topCount=1000;
+end
+
+file=imageResiduals.file;
+
+% File name should be in the 'Text' field.
+[ok,msg]=checkxmlfields(file,'Text');
+if ~ok, error('DBAT XML script output/files/report/file error: %s',msg); end
+
+% Get filename.
+fileName=parsepath(file.Text,baseDir);
+
+% Verify that directory exists.
+if ~exist(fileparts(fileName),'dir')
+    error('DBAT XML error: Output dir %s does not exist',fileparts(fileName));
+end
+
+[fid,msg]=fopen(fileName,'wt+');
+if fid<0
+    error('Cannot open file %s for writing: %s',fileName,msg);
+end
+
+fprintf(fid,'# Top residual listing for dbat script file\n# %s.\n', ...
+        docFile);
+[v,d]=dbatversion;
+fprintf(fid,'# Generated by DBAT version %s (%s).\n',v,d);
+fprintf(fid,'# Listing top %d residuals.\n',topCount);
+fprintf(fid,'# Format: OP id, image id, x, y, resx, resy, resTot\n');
+
+resVec=s.post.res.IP;
+resNorm=sqrt(sum(resVec.^2,1));
+[topNorm,i]=sort(resNorm,'descend');
+
+if length(topNorm)>topCount
+    topNorm=topNorm(1:topCount);
+    i=i(1:topCount);
+end
+
+for ii=1:length(i)
+    [OPix,imIx]=find(s.IP.ix==i(ii));
+    % Measured coordinates.
+    xy=s.IP.val(:,i(ii));
+    res=s.post.res.IP(:,i(ii));
+    OPid=s.OP.id(OPix);
+    imId=s.EO.id(imIx);
+    fprintf(fid,'%d, %d, %g, %g, %g, %g, %g\n',OPid,imId,xy,res,norm(res));
+end
+
+fclose(fid);
+
+
