@@ -1,0 +1,55 @@
+# Top residual listing for dbat script file
+# /home/niclas/dbat/data/script/camcaldemo/camcaldemo.xml.
+# Generated by DBAT version 0.9.0.1 (2019-11-22).
+# Listing top 50 residuals.
+# Format: OP id, image id, x, y, resx, resy, resTot
+1003, 5, 1901.09, 1200.42, -0.412433, -0.861245, 0.954905
+8, 19, 1975.43, 35.2562, -0.866676, 0.0144436, 0.866797
+1004, 6, 1760.12, 1391.4, 0.726664, 0.461602, 0.860882
+1004, 10, 698.27, 1493.46, 0.645355, -0.565555, 0.8581
+1002, 13, 1845.79, 1202.27, -0.437309, -0.73143, 0.852191
+1002, 11, 1822.2, 661.353, 0.146401, -0.813645, 0.826711
+1004, 8, 1364.21, 1542.72, 0.814727, 0.0261304, 0.815146
+1004, 5, 1735.8, 202.015, -0.237586, 0.740606, 0.777782
+75, 12, 1469.84, 308.197, 0.430649, 0.641885, 0.772965
+90, 11, 179.729, 577.642, 0.713096, -0.291136, 0.770238
+1003, 3, 1875.15, 611.321, 0.109269, -0.744288, 0.752266
+1003, 6, 804.805, 1561.88, -0.744754, -0.0217562, 0.745072
+1001, 16, 1474.56, 1527.97, 0.669505, 0.307692, 0.736825
+90, 20, 2128.73, 83.0316, -0.72512, 0.123217, 0.735514
+1004, 7, 1966.13, 544.762, 0.27301, 0.641581, 0.697252
+75, 11, 559.153, 594.713, -0.598637, 0.318737, 0.678203
+1003, 1, 1641.64, 360.476, 0.2984, -0.606257, 0.675714
+1003, 11, 365.994, 585.873, 0.0733715, -0.667593, 0.671613
+1002, 5, 659.969, 208.975, 0.153047, -0.65336, 0.671046
+1001, 2, 823.185, 1457.41, 0.582077, -0.320442, 0.664452
+1002, 16, 770.28, 913.086, -0.64583, 0.136049, 0.660005
+1003, 8, 657.155, 970.638, -0.581345, 0.280077, 0.645294
+81, 6, 615.147, 1591.15, -0.168948, -0.619838, 0.64245
+1004, 11, 965.924, 1281.09, 0.252932, 0.590169, 0.642086
+1002, 6, 1761.17, 344.387, -0.446858, -0.451738, 0.635413
+1001, 1, 1813.43, 1266.24, 0.182297, 0.60721, 0.633984
+90, 9, 166.508, 1443.59, -0.543741, 0.285713, 0.614236
+1001, 9, 575.944, 217.946, -0.514564, 0.332391, 0.612585
+1001, 19, 1810.69, 211.104, -0.340953, 0.506038, 0.610183
+81, 12, 1541.48, 63.5146, 0.246827, -0.557219, 0.609439
+1003, 16, 1808.25, 765.709, -0.519595, -0.307857, 0.603949
+1001, 6, 816.139, 150.508, 0.57875, 0.146238, 0.59694
+1001, 14, 1739.83, 1334.25, 0.485861, 0.346156, 0.596561
+1001, 8, 1224.48, 153.585, 0.559495, 0.196947, 0.593147
+1001, 13, 1642.62, 209.205, 0.00722055, 0.581751, 0.581796
+6, 19, 1984.57, 207.13, -0.574469, 0.0889627, 0.581316
+1004, 3, 1136.79, 172.024, -0.414857, 0.402915, 0.578314
+1003, 7, 1275.91, 1397.56, -0.470113, -0.335094, 0.577316
+88, 6, 1849.93, 1513.45, 0.174295, 0.549743, 0.576711
+1004, 1, 635.606, 362.552, -0.518371, 0.239045, 0.570834
+11, 2, 678.768, 66.3951, 0.499915, -0.255299, 0.561331
+1001, 10, 1675.74, 312.507, 0.547607, 0.120094, 0.560621
+1002, 9, 1655.74, 216.715, 0.185815, -0.524356, 0.556306
+1002, 8, 1733.97, 786.808, -0.528191, -0.174584, 0.556296
+17, 19, 1801.53, 39.6917, -0.538491, 0.11896, 0.551474
+1003, 13, 571.978, 225.815, -0.00550326, -0.548227, 0.548254
+8, 18, 1570.3, 76.3178, -0.54328, 0.0616991, 0.546772
+92, 20, 1973.17, 81.0364, -0.540951, 0.0611483, 0.544396
+1004, 16, 1307.88, 115.365, 0.510338, 0.188399, 0.544003
+1001, 18, 1402.95, 249.038, -0.426384, 0.334833, 0.54214
