@@ -1,7 +1,8 @@
 Summary changelog file for release.
 
 Release 0.9.0.1, Nov 22, 2019.
-- Internal release with full operations and plotting support.
+- Internal release with full operations and plotting support and file output
+  except IO.
 
 Release 0.9.0.0, Nov 16, 2019.
 - Internal release with nominal support for DBAT XML scripts.
